--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "buildDev": "rm -rf dist && webpack --mode development --config webpack.server.config.js && webpack --mode development  --config webpack.dev.config.js",
+    "buildProd": "rm -rf dist && webpack --mode production --config webpack.server.config.js && webpack --mode production  --config webpack.prod.config.js",
+    "start": "node -r dotenv/config ./dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,13 +20,36 @@
   },
   "homepage": "https://github.com/bschreck/kyctermloans#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "client-oauth2": "^4.3.3",
     "core-js": "^2.6.11",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-oauth-server": "^2.0.0",
     "jquery": "^3.5.1",
     "jso": "^4.1.1",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "regenerator-runtime": "^0.13.7",
+    "simple-oauth2": "^4.1.0",
+    "webpack-merge": "^5.4.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.2.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "style-loader": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-middleware": "^4.0.2"
   }
 }
